--- a/.github/workflows/secondaction.yml
+++ b/.github/workflows/secondaction.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Priniting things
-      - run: |
+        run: |
           echo "Hello sathya"
           echo "Bye"
